# eigenGPT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.c  main.cpp  model_offsets.h  model_offsets.py  safetensors.cpp  safetensors.hpp  token.hpp  transformer.hpp  vocab.h
